--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "alova": "^3.3.3",
-    "vue": "^3.5.17"
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.4.1",
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@types/node": "^24.0.7",
+    "@types/node": "^24.0.10",
+    "@vicons/ionicons5": "^0.13.0",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
+    "naive-ui": "^2.42.0",
     "typescript": "^5.8.3",
+    "unocss": "^66.3.3",
     "vite": "^7.0.0",
     "vue-tsc": "^2.2.10"
   }
