feat(backend): 实现登录功能

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -37,5 +37,5 @@ logging:
     org.springframework.boot.web.servlet: DEBUG  # Servlet 容器日志
     org.springframework.security: DEBUG
 jwt:
-  private.key: classpath:app.key
-  public.key: classpath:app.pub
+  expiration: 3600000
+  refreshExpirationMs: 86400000
