--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -1,11 +1,4 @@
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/luna
-    username: root
-    password: Passw0rd
-    type: com.zaxxer.hikari.HikariDataSource
-    hikari:
-      connection-test-query: SELECT 1
   data:
     redis:
       host: localhost
@@ -32,6 +25,21 @@ mybatis-flex:
   global-config:
     print-banner: false
     logic-delete-column: deleted
+  datasource:
+    ds1:
+      url: jdbc:mysql://localhost:3306/luna
+      username: root
+      password: Passw0rd
+#      type: com.zaxxer.hikari.HikariDataSource
+      hikari:
+        connection-test-query: SELECT 1
+    ds2:
+      url: jdbc:mysql://127.0.0.1:3306/tauren
+      username: root
+      password: Passw0rd
+#      type: com.zaxxer.hikari.HikariDataSource
+      hikari:
+        connection-test-query: SELECT 1
 springdoc:
   api-docs:
     enabled: true
@@ -44,5 +52,5 @@ logging:
     org.springframework.boot.web.servlet: DEBUG  # Servlet 容器日志
     org.springframework.security: DEBUG
 jwt:
-  expiration: 3600000
-  refreshExpirationMs: 86400000
+  expiration: 28800000
+#  refreshExpirationMs: 86400000
