--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,4 @@
 VITE_API_BASE_URL= ''
-VITE_APP_TITLE='Luna'
+VITE_DEV_DOMAIN='http://127.0.0.1:8080/'
+VITE_APP_TITLE='Luna | MAKE IT BETTER!'
+VITE_APP_BASE_API='/prod-api'
