--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -26,27 +26,26 @@
                 <version>1.15.0</version>
                 <configuration>
                     <!-- change the directory to your local node path -->
-                    <installDirectory>F:\env\node-versions\22.18</installDirectory>
+                    <installDirectory>F:\env\node-versions\22</installDirectory>
                 </configuration>
                 <executions>
                     <execution>
                         <!-- optional: you don't really need execution ids, but it looks nice in your build log. -->
-                        <id>install node and npm</id>
+                        <id>install-node-and-pnpm</id>
                         <goals>
-                            <goal>install-node-and-npm</goal>
+                            <goal>install-node-and-pnpm</goal>
                         </goals>
                         <!-- optional: default phase is "generate-resources" -->
                         <phase>generate-resources</phase>
                         <configuration>
-                            <skip>true</skip>
-                            <nodeVersion>v22.17.0</nodeVersion>
-                            <npmVersion>10.9.2</npmVersion>
+                            <nodeVersion>v22.18.0</nodeVersion>
+                            <pnpmVersion>10.14.0</pnpmVersion>
                         </configuration>
                     </execution>
                     <execution>
                         <id>install frontend dependencies</id>
                         <goals>
-                            <goal>npm</goal>
+                            <goal>pnpm</goal>
                         </goals>
                         <!-- optional: default phase is "generate-resources" -->
                         <phase>generate-resources</phase>
@@ -60,7 +59,7 @@
                     <execution>
                         <id>build</id>
                         <goals>
-                            <goal>npm</goal>
+                            <goal>pnpm</goal>
                         </goals>
                         <configuration>
                             <arguments>run build</arguments>
